Bug 1842936 - Make WindowGlobalParent::IsCurrentGlobal() consistent with nsPIDOMWindowInner::IsCurrentInnerWindow(). r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D183311